# CrowdControl-BL3

./: CrowdControl.json  CrowdControl.sdkmod  README.MD  Server.cs  requested effects.txt
CrowdControl/: Comms.py  Effect.py  EnemySpawnerLists.py  EpicEffects.py  GarwoodEffects.py  InteractiveObjectLists.py  OneHealth.py  PyrexEffects.py  SharedEffects.py  Utils.py  YetiEffects.py  __init__.py  comms.py  pyproject.toml
