[project]
name = "CrowdControl"
version = "1.0.4"
authors = [{ name = "Pyrex, RedxYeti, Garwood, EpicNNG" }]
description = "The companion mod for BL3 Crowd Control."

[tool.sdkmod]
name = "Crowd Control"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
supported_games = ["BL3"]
version = "1.0.4"
