[project]
name = "CrowdControl"
version = "1.0.0"
authors = [{ name = "Pyrex, RedxYeti, Garwood, EpicNNG" }]
description = "The companion mod for BL2 Crowd Control."

[tool.sdkmod]
name = "Crowd Control"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
supported_games = ["BL2"]
version = "1.0.0"
